id와 class 차이를 제대로 알아야 할 듯듯

--- a/graduation_work/templates/graduation_work/teachers_page.html
+++ b/graduation_work/templates/graduation_work/teachers_page.html
@@ -112,7 +112,7 @@
                 <div class="doughnut-box">
                     <canvas id="doughnut-chart" width="400" height="250"></canvas>
                 </div>
-                <div class="bar-box">
+                <div class="bar-box" id="bar-box">
                     <canvas id="bar-chart" width="400" height="250"></canvas>
                 </div>
             </div>
