--- a/static/css/teachers_style.css
+++ b/static/css/teachers_style.css
@@ -157,6 +157,13 @@ body {
     background-color: #ffffff;
 }
 
+.bar-box p {
+  text-align: center;
+  font-size: 18px;
+  color: #444;
+  margin-top: 100px;
+}
+
 /* .x-btn {
     float: right;
     background-color: transparent;
