--- a/static/css/teachers_style.css
+++ b/static/css/teachers_style.css
@@ -138,7 +138,7 @@ body {
     display: flex;
     gap: 15px; /* 영역 사이 간격 */
     background-color: #fffeee;
-    padding: 25px;
+    padding: 10px;
     border-radius: 15px;
     width: 100%;
     align-items: center;
@@ -155,6 +155,7 @@ body {
 .bar-box {
     width: 600px;
     background-color: #ffffff;
+    height: 400px;
 }
 
 .bar-box p {
