--- a/graduation_work/templates/graduation_work/teachers_page.html
+++ b/graduation_work/templates/graduation_work/teachers_page.html
@@ -109,7 +109,7 @@
         </section>
         <section class="result-container" id="resultContainer">
             <div class="result-box">
-                <div class="doughnut-box">
+                <div class="doughnut-box" id="doughnut-box">
                     <canvas id="doughnut-chart" width="400" height="250"></canvas>
                 </div>
                 <div class="bar-box" id="bar-box">
