--- a/graduation_work/templates/graduation_work/parents_page.html
+++ b/graduation_work/templates/graduation_work/parents_page.html
@@ -93,23 +93,23 @@
                         <table id="eventTable">
                             <tbody>
                                 <tr>
-                                    <th>standing</th>
+                                    <th>calling</th>
                                     <td> 0건 </td>
                                 </tr>
                                 <tr>
-                                    <th>sitting</th>
+                                    <th>clapping</th>
                                     <td> 0건 </td>
                                 </tr>
                                 <tr>
-                                    <th>walking</th>
+                                    <th>cycling</th>
                                     <td> 0건 </td>
                                 </tr>
                                 <tr>
-                                    <th>running</th>
+                                    <th>dancing</th>
                                     <td> 0건 </td>
                                 </tr>
                                 <tr>
-                                    <th>playing</th>
+                                    <th>drinking</th>
                                     <td> 0건 </td>
                                 </tr>
                                 <tr>
@@ -117,7 +117,35 @@
                                     <td> 0건 </td>
                                 </tr>
                                 <tr>
-                                    <th>falldown</th>
+                                    <th>eating</th>
+                                    <td> 0건 </td>
+                                </tr>
+                                <tr>
+                                    <th>fighting</th>
+                                    <td> 0건 </td>
+                                </tr>
+                                <tr>
+                                    <th>hugging</th>
+                                    <td> 0건 </td>
+                                </tr>
+                                <tr>
+                                    <th>laughing</th>
+                                    <td> 0건 </td>
+                                </tr>
+                                <tr>
+                                    <th>listening_to_music</th>
+                                    <td> 0건 </td>
+                                </tr>
+                                <tr>
+                                    <th>running</th>
+                                    <td> 0건 </td>
+                                </tr>
+                                <tr>
+                                    <th>sitting</th>
+                                    <td> 0건 </td>
+                                </tr>
+                                <tr>
+                                    <th>sleeping</th>
                                     <td> 0건 </td>
                                 </tr>
                             </tbody>
