--- a/graduation_work/templates/graduation_work/teachers_page.html
+++ b/graduation_work/templates/graduation_work/teachers_page.html
@@ -8,14 +8,11 @@
     {% load tz %}
 
     {% block extra_headers %}
-    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% endblock %}
     <!-- Django에서만 작동 -->
-    <link rel="icon" href="{% static 'media/webLogo.png' %}">
-    <link rel="apple-touch-icon" href="{% static 'media/webLogo.png' %}">
+    <link rel="icon" href="{{ MEDIA_URL }}webLogo.png">
+    <link rel="apple-touch-icon" href="{{ MEDIA_URL }}webLogo.png">
     <!-- Django에서만 작동 -->
     <link rel="stylesheet" href="{% static 'css/teachers_style.css' %}">
 
