--- a/graduation_work/templates/graduation_work/teachers_page.html
+++ b/graduation_work/templates/graduation_work/teachers_page.html
@@ -106,7 +106,7 @@
         </section>
         <section class="result-container" id="resultContainer" >
             <div class="result-box">
-                <div class="doughnut-box" id="doughnut-box" data-classroom="{{ teacher.classroom }}">
+                <div class="doughnut-box" id="doughnut-box" data-classroom="{{ teachers.classroom }}">
                     <canvas id="doughnut-chart" width="400" height="250"></canvas>
                 </div>
                 <div class="bar-box" id="bar-box">
