fix: 오늘의 어쩌고도...

--- a/graduation_work/templates/graduation_work/teachers_page.html
+++ b/graduation_work/templates/graduation_work/teachers_page.html
@@ -109,7 +109,7 @@
                 <div class="doughnut-box" id="doughnut-box" data-classroom="{{ teachers.classroom }}">
                     <canvas id="doughnut-chart" width="400" height="250"></canvas>
                 </div>
-                <div class="bar-box" id="bar-box">
+                <div class="bar-box" id="bar-box" data-classroom="{{ teachers.classroom }}">
                     <canvas id="bar-chart" width="400" height="250"></canvas>
                 </div>
             </div>
