fix: 왜 select안 닫힘?

--- a/graduation_work/templates/graduation_work/temporary_inputResult.html
+++ b/graduation_work/templates/graduation_work/temporary_inputResult.html
@@ -24,7 +24,7 @@
                 <select id="danger" for="danger" name="danger">
                     <option value="위험">위험</option>
                     <option value="비위험">비위험</option>
-                <br>
+                </select><br>
                 <label for="timestamp">감지 시간: </label>
                 <input type="datetime-local" step="1" id="timestamp" name="timestamp"><br><br>
                 <input type="submit" value="저장">
