--- a/graduation_work/templates/graduation_work/parents_page.html
+++ b/graduation_work/templates/graduation_work/parents_page.html
@@ -93,7 +93,7 @@
                         <table id="eventTable">
                             <tbody>
                                 <tr>
-                                    <th>fighting</th>
+                                    <th styel="color: red; ">fighting</th>
                                     <td> 0건 </td>
                                 </tr>
                                 <tr>
